# ale-my-eyes

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: android.yml  build.yml
ale-cli/src/: main.rs
ale-core/: Cargo.toml
ale-core/src/: actions.rs  asr.rs  cloud.rs  config.rs  context.rs  downloader.rs  inference.rs  lib.rs  llm.rs  memory.rs  remote.rs  secret_store.rs  tts.rs  vad.rs  vlm.rs
ale-gui/: Cargo.toml  build.rs
ale-gui/android/java/com/alemyeyes/automation/: AleAccessibilityService.java  AutomationBridge.java
ale-gui/android/java/com/alemyeyes/foreground/: AleForegroundService.java
ale-gui/android/res/values/: strings.xml
ale-gui/android/res/xml/: accessibility_service_config.xml
ale-gui/preview/: ui-preview.html
ale-gui/src/: android.rs  android_automation.rs  audio.rs  audit.rs  automation.rs  automation_ios.rs  camera.rs  camera_ios.rs  conversation.rs  file_picker.rs  ios.rs  lib.rs  main.rs  remote_client.rs  remote_crypto.rs  remote_server.rs  screen_capture.rs  tts_player.rs  tts_player_ios.rs
ale-gui/src/platform/: android.rs  desktop.rs  ios.rs  mod.rs
ale-gui/ui/: app.slint  compact.slint  desktop-screen.slint  diagnostics-screen.slint  main-screen.slint  settings-popup.slint  settings-screen.slint  widgets.slint
ale-server/src/: main.rs
docs/: API.md  CODE-WIKI.md
scripts/: build-android-java.sh  build-release.sh  create-release.sh  package-android.sh  package-linux.sh  package-macos.sh  package-windows.sh
