[workspace]
members = [
    "ale-core",
    "ale-cli",
    "ale-gui",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
bytes = "1"
image = "0.25"
tokio-stream = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
walkdir = "2"
async-trait = "0.1"

[patch.crates-io]
i-slint-backend-winit = { path = "vendor/i-slint-backend-winit-1.16.1" }
