[package]
name = "ale-gui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
ale-core = { path = "../ale-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hound = "3"
image = "0.25"
tracing = "0.1"
anyhow = "1"

# Desktop-only dependencies (Linux, Windows, macOS)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
slint = "1.16"
cpal = "0.15"
rodio = "0.19"
rfd = "0.15"
xcap = "0.9"
enigo = "0.6"
open = "5"

# Android-only dependencies
[target.'cfg(target_os = "android")'.dependencies]
slint = { version = "1.16", features = ["backend-android-activity-06"] }
oboe = "0.6"
jni = "0.21"
ndk-context = "0.1"

# iOS-only dependencies
[target.'cfg(target_os = "ios")'.dependencies]
slint = "1.16"
cpal = "0.15"
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-av-foundation = "0.3"

[[bin]]
name = "ale-gui"
path = "src/main.rs"

[build-dependencies]
slint-build = "1.16"

[package.metadata.android]
package = "com.alemyeyes"
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 34

[package.metadata.android.application]
label = "Ale, My Eyes!"
theme = "@android:style/Theme.Material.Light.NoActionBar"

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[[package.metadata.android.uses_permission]]
name = "android.permission.RECORD_AUDIO"

[[package.metadata.android.uses_permission]]
name = "android.permission.MODIFY_AUDIO_SETTINGS"

[[package.metadata.android.uses_permission]]
name = "android.permission.READ_EXTERNAL_STORAGE"

[[package.metadata.android.uses_permission]]
name = "android.permission.WRITE_EXTERNAL_STORAGE"

[[package.metadata.android.uses_permission]]
name = "android.permission.CAMERA"

[[package.metadata.android.uses_permission]]
name = "android.permission.FOREGROUND_SERVICE"

[[package.metadata.android.uses_permission]]
name = "android.permission.FOREGROUND_SERVICE_MICROPHONE"

[[package.metadata.android.uses_permission]]
name = "android.permission.WAKE_LOCK"

[[package.metadata.android.uses_permission]]
name = "android.permission.POST_NOTIFICATIONS"

[[package.metadata.android.uses_permission]]
name = "android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS"

# Accessibility Service
[[package.metadata.android.application.service]]
name = "AleAccessibilityService"
label = "Ale, My Eyes! 自动化服务"
permission = "android.permission.BIND_ACCESSIBILITY_SERVICE"
exported = "true"

[[package.metadata.android.application.service.meta_data]]
name = "android.accessibilityservice"
resource = "@xml/accessibility_service_config"

# Application metadata for JNI bridge initialization
[[package.metadata.android.application.meta_data]]
name = "com.alemyeyes.automation.bridge_initialized"
value = "true"

# Foreground Service (persistent notification + wake lock)
[[package.metadata.android.application.service]]
name = "AleForegroundService"
label = "Ale, My Eyes! 监听服务"
foreground_service_type = "microphone|mediaPlayback"
exported = "false"
